@@ -1,3 +1,5 @@
+18 Mar 2001 Correct LRA/LRAG segment table entry address on cc 3 - Jan Jaeger
+18 Mar 2001 Correct address types in move char instructions - Jan Jaeger
 18 Mar 2001 Correct subspace_replace address type - Jan Jaeger
 16 Mar 2001 Fix to allow HET files to reside on read-only media - Leland Lucius
 16 Mar 2001 Fix LPSW in ESAME mode - Jan Jaeger
